# ising

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md  ising.desktop  ising.kdev4  toDos
.kdev4/: ising.kdev4
exampleData/: 1D_size250.averaged_data  1D_size50.averaged_data  1D_size50.data  size100_varT.averaged_data  size10_varT.averaged_data  size30_varT.averaged_data  size50_varT.averaged_data
gui/: base_parameters_widget.cpp  base_parameters_widget.hpp  chart_widget.cpp  chart_widget.hpp  constrained_layout_widget.cpp  constrained_layout_widget.hpp  constrained_parameters_widget.cpp  constrained_parameters_widget.hpp  default_layout_widget.cpp  default_layout_widget.hpp  default_parameters_widget.cpp  default_parameters_widget.hpp  grid_widget.cpp  grid_widget.hpp  ising.cpp  ising.hpp  ising.ui  long_qspinbox.cpp  long_qspinbox.hpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  mc_widget.cpp  mc_widget.hpp  message_box.cpp  message_box.hpp  parameters_widget.cpp  parameters_widget.hpp  rectangular.cpp  rectangular.hpp
gui/mcwidget/: base_mc_widget.cpp  base_mc_widget.hpp  constrained_mc_widget.cpp  constrained_mc_widget.hpp  default_mc_widget.cpp  default_mc_widget.hpp
gui/parameters/: base_parameters_widget.cpp  base_parameters_widget.hpp  constrained_parameters_widget.cpp  constrained_parameters_widget.hpp  default_parameters_widget.cpp  default_parameters_widget.hpp
lib/: enhance.cpp  enhance.hpp
src/: MC.cpp  MC.hpp  definitions.hpp  global.hpp  ising.cpp  main.cpp  programHandler.hpp
src/MSM/: Cextractor.cpp  Cextractor.hpp  Testimator.cpp  Testimator.hpp  msm.cpp  msm.hpp
src/WLmethods/: WL-IT.cpp  WL-IT.hpp  WL.cpp  WL.hpp  WL_base.cpp  WL_base.hpp  histogram.hpp
src/input/: parameters.cpp  parameters.hpp  program_options.hpp
src/system/: MC.cpp  MC.hpp  acceptance.hpp  histogram.hpp  montecarlohost.cpp  montecarlohost.hpp  spin.cpp  spin.hpp  spinsys.cpp  spinsys.hpp  spinsystem.cpp  spinsystem.hpp
src/utility/: histogram.hpp  logger.cpp  logger.hpp  pngmaker.cpp  pngmaker.hpp  randomnumbers.cpp  randomnumbers.hpp  singleton.hpp  utility.hpp
